# hd-ctrlplane-enhanced

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  idea.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py  main.py  orchestrator.py
agent/memory/: memory_manager.py
agent/modules/: auto_rollback.py  nl_pipeline_generator.py  resource_scheduler.py  risk_scorer.py
ai_layer/patches/: ctrlplane_ai_integration.md
config/: .env.example  agent_config.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
tests/: test-scenarios.md  test_agent.py
tools/: hf_model_manager.py  knowledge_updater.py  llm_client.py
upstream/: README.md
