[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrlplane-enhanced"
version = "1.0.0"
description = "ML-powered CI/CD Intelligence Agent"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "ctrlplane-enhanced contributors"},
]
keywords = ["cicd", "deployment", "risk-scoring", "anomaly-detection", "auto-rollback", "ctrlplane"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "anthropic>=0.34.0",
    "openai>=1.35.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.7.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.9.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
ctrlplane-agent = "agent.main:main"

[tool.setuptools.packages.find]
include = ["agent*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true